# Manta

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SOFTWARE.md
dependencies/SDL2/docs/: README-visualc.md  README-vita.md
dependencies/SDL2/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_rect.h  SDL_render.h  SDL_revision.h  SDL_rwops.h  SDL_sensor.h  SDL_shape.h  (+23 more)
dependencies/glew/lib/Release/Win32/: glew32.lib  glew32s.lib
dependencies/glew/lib/Release/x64/: glew32.lib  glew32s.lib
dependencies/imgui/backends/: imgui_impl_sdl.cpp
dependencies/lua/: CMakeLists.txt  Makefile  README
dependencies/lua/doc/: contents.html  lua.1  manual.html  readme.html
dependencies/lua/src/: luaconf.h
engine/: CMakeLists.txt
engine/lua_src/config/: engine.lua
engine/lua_src/scripts/: hello.lua  test.lua
engine/lua_src/silica/examples/: lua_behavior.lua
engine/lua_src/silica/skeletons/: behavior.lua  globalskeleton.lua  timing.lua  v2skeleton.lua  v3skeleton.lua
engine/shaders/: unlit.glsl
engine/src/: constants.hpp  lua_common.hpp  main.cpp  old_main.cpp
engine/src/data/: timing.cpp  timing.hpp
engine/src/lua_binds/: actor.cpp  actor.hpp  behavior.cpp  behavior.hpp  lua_helpers.hpp  silica_types.cpp  silica_types.hpp  timing.cpp  timing.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  world.cpp  world.hpp
engine/src/lua_binds/helpers/: construction.hpp  lua_helpers.hpp  references.hpp
engine/src/rendering/: camera.cpp  camera.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
engine/src/types/: matrix4x4.cpp  matrix4x4.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
engine/src/world/: actor.cpp  actor.hpp  behavior.cpp  behavior.hpp  timing.cpp  timing.hpp  world.cpp  world.hpp
projects/common/data/: mmdl.cpp  mmdl.hpp
projects/common/data/meshes/: bsm.cpp  bsm.hpp  mmdl.cpp  mmdl.hpp  obj.cpp  obj.hpp  smf.cpp  smf.hpp
projects/engine/: CMakeLists.txt
projects/engine/base_content/shaders/: debug.glsl  lit.glsl  unlit.glsl
projects/engine/src/: main.cpp
projects/engine/src/assets/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.hpp
projects/engine/src/data/: bifurcated_ostream.cpp  bifurcated_ostream.hpp  console.cpp  console.hpp  cvar.hpp  engine_context.hpp
projects/engine/src/data/content/: content_folder.hpp
projects/engine/src/input/: axis.cpp  axis.hpp  input_server.cpp  input_server.hpp  inputserver.cpp  inputserver.hpp
projects/engine/src/modularity/: dynlib.cpp  dynlib.hpp  gamemodule.hpp
projects/engine/src/rendering/: camera.cpp  camera.hpp  lightbuffer.cpp  lightbuffer.hpp  lighting.cpp  lighting.hpp  render_target.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  viewport.cpp  viewport.hpp
projects/engine/src/ui/: imguicontext.cpp  imguicontext.hpp
projects/engine/src/world/: actor.cpp  actor.hpp  behavior.cpp  behavior.hpp  timing.cpp  timing.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
projects/engine/src/world/behaviors/: camera.cpp  camera.hpp  light.cpp  light.hpp
projects/game/: CMakeLists.txt
projects/game/src/: gamegamemodule.cpp  gamegamemodule.hpp  main.cpp
projects/game/src/behaviors/: freecam.cpp  freecam.hpp
projects/game/src/game/: gamegamemodule.cpp  gamegamemodule.hpp
projects/packer/: CMakeLists.txt
projects/packer/src/: main.cpp
